--- a/public/admin.html
+++ b/public/admin.html
@@ -5,40 +5,55 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
+
+	<!-- jQuery -->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
 	<!-- Foundation CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
 		integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
-	
-	<!-- CSS and JS -->
+	<script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
+		integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
+
+	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css">
+
+	<!-- Javascript -->
 	<script src="js/script.js"></script>
+
 	<title>Circle | ADMIN</title>
 </head>
 
 <body>
 	<div class="off-canvas position-left" id="offCanvas" data-off-canvas>
 
-    <!-- Close button -->
-    <button class="close-button" aria-label="Close menu" type="button" data-close>
-      <span aria-hidden="true">&times;</span>
-    </button>
+		<!-- Close button -->
+		<button class="close-button" aria-label="Close menu" type="button" data-close>
+			<span aria-hidden="true">&times;</span>
+		</button>
 
-    <!-- Menu -->
-    <ul class="vertical menu">
-      <li><a href="#">Foundation</a></li>
-      <li><a href="#">Dot</a></li>
-      <li><a href="#">ZURB</a></li>
-      <li><a href="#">Com</a></li>
-      <li><a href="#">Slash</a></li>
-      <li><a href="#">Sites</a></li>
-    </ul>
+		<!-- Menu -->
+		<ul class="vertical menu">
+			<li><a href="#">Foundation</a></li>
+			<li><a href="#">Dot</a></li>
+			<li><a href="#">ZURB</a></li>
+			<li><a href="#">Com</a></li>
+			<li><a href="#">Slash</a></li>
+			<li><a href="#">Sites</a></li>
+		</ul>
 
-  </div>
+	</div>
 
-  <div class="off-canvas-content" data-off-canvas-content>
-    <!-- Your page content lives here -->
-  </div>
+	<div class="off-canvas-content" data-off-canvas-content>
+		<!-- Your page content lives here -->
+	</div>
+
+
+	<script>
+		$(document).ready(function () {
+			$(document).foundation();
+		})
+	</script>
 </body>
 
 </html>
