--- a/public/main.html
+++ b/public/main.html
@@ -7,19 +7,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- jQuery -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+	<!-- Javascript -->
+	<script src="js/script.js"></script>
 
 	<!-- Foundation CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
 		integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
 		integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
+	<meta class="foundation=mq">
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css">
-
-	<!-- Javascript -->
-	<script src="js/script.js"></script>
 
 	<title>Welcome to Circle, Not Square</title>
 </head>
@@ -28,7 +30,7 @@
 	<div class="top-bar">
 		<div class="top-bar-left">
 			<ul class="dropdown menu" data-dropdown-menu>
-				<li class="menu-text">Circle</li>
+				<li class="menu-text">Powered by Circle</li>
 				<li class="menu-text">The well-rounded restaurant management system!</li>
 			</ul>
 		</div>
@@ -47,33 +49,121 @@
 	<div class="row">
 		<div class="columns">
 
-			<ul class="tabs" data-responsive-accordion-tabs="tabs medium-accordion large-tabs" role="tablist"
-				data-tabs="2m5cy2-tabs">
-				<li class="tabs-title is-active" role="presentation" data-accordion-item>
-					<a href="#menuAppetizers" class="accordion-title" role="tab">Appetizers</a>
+			<!-- Tab menu -->
+			<ul class="tabs" data-tabs="tabs" role="tablist" data-tabs="2m5cy2-tabs">
+				<li class="tabs-title is-active" role="presentation">
+					<a href="#menuAppetizers" role="tab">Appetizers</a>
 				</li>
-				<li class="tabs-title" role="presentation" data-accordion-item>
-					<a href="#menuBurgers" class="accordion-title" role="tab">Burgers</a>
+				<li class="tabs-title" role="presentation">
+					<a href="#menuBurgers" role="tab">Burgers</a>
 				</li>
-				<li class="tabs-title" role="presentation" data-accordion-item>
-					<a href="#menuSalads" class="accordion-title" role="tab">Salads</a>
+				<li class="tabs-title" role="presentation">
+					<a href="#menuSalads" role="tab">Salads</a>
 				</li>
-				<li class="tabs-title" role="presentation" data-accordion-item>
-					<a href="#menuSoftServe" class="accordion-title" role="tab">Soft-Serve</a>
+				<li class="tabs-title" role="presentation">
+					<a href="#menuSoftServe" role="tab">Soft-Serve</a>
 				</li>
-				<li class="tabs-title" role="presentation" data-accordion-item>
-					<a href="#menuDrinks" class="accordion-title" role="tab">Drinks</a>
+				<li class="tabs-title" role="presentation">
+					<a href="#menuDrinks" role="tab">Drinks</a>
 				</li>
 			</ul>
 
 			<div class="tabs-content" data-tabs-content="example-tabs">
-				<div class="tabs-panel" id="menuAppetizers">
-					<p>one</p>
-					<p>Apps go here</p>
+				<div class="tabs-panel is-active" id="menuAppetizers">
+
+					<div class="cell cell-card" style="width: 300px;">
+						<div class="header cell-header ">
+							<h4>House Fries</h4>
+							<p>oh yum a tasty treat .Get it while its hot</p>
+							<div class="cell shrink footer cell-footer">
+								<p>Price: $$
+									<button type="button" class="button align-right">Add Item</button>
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="flex-container ">
+
+						<div class="cell cell-card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>House Fries</h4>
+								<p>oh yum a tasty treat .Get it while its hot</p>
+								<div class="cell shrink footer cell-footer">
+									<p class="align-bottom">Price: $$
+										<button type="button" class="button align-right">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="cell cell-card" style="width: 300px;">
+							<div class="card-section">
+								<h4>Buffalo wings</h4>
+								<p>Tasty treat.</p>
+								<div clas="flex-container">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="card-section">
+								<h4>App 1</h4>
+								<p>Tasty treat.</p>
+								<div clas="flex-container">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="card-section">
+								<h4>App 1</h4>
+								<p>Tasty treat.</p>
+								<div clas="flex-container">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="card-section">
+								<h4>App 1</h4>
+								<p>Tasty treat.</p>
+								<div clas="flex-container">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="card-section">
+								<h4>App 1</h4>
+								<p>Tasty treat.</p>
+								<div clas="flex-container">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+					</div>
+
 				</div>
+
+
 				<div class="tabs-panel" id="menuBurgers">
 					<p>Burgers! Burgers! Burgers! Burgers! Burgers! Burgers! </p>
-					<img class="thumbnail" src="//foundation.zurb.com/sites/docs/assets/img/generic/rectangle-7.jpg">
 				</div>
 				<div class="tabs-panel" id="menuSalads">
 					<p>three</p>
@@ -81,7 +171,6 @@
 				</div>
 				<div class="tabs-panel" id="menuSoftServe">
 					<p>four</p>
-					<img class="thumbnail" src="//foundation.zurb.com/sites/docs/assets/img/generic/rectangle-2.jpg">
 				</div>
 				<div class="tabs-panel" id="menuDrinks">
 					<p>five</p>
@@ -89,7 +178,6 @@
 				</div>
 				<div class="tabs-panel" id="panel6">
 					<p>Drinks go here</p>
-					<img class="thumbnail" src="//foundation.zurb.com/sites/docs/assets/img/generic/rectangle-8.jpg">
 				</div>
 			</div>
 		</div>
