--- a/public/main.html
+++ b/public/main.html
@@ -36,7 +36,8 @@
 		</div>
 		<div class="top-bar-right">
 			<ul class="dropdown menu" data-dropdown-menu>
-				<li><button type="button" class="button">Login</button></li>
+				<li><button type="button" class="button secondary">Admin Login</button></li>
+				<li><button type="button" class="button" data-open="modalCart">View Cart</button></li>
 			</ul>
 		</div>
 	</div>
@@ -50,7 +51,7 @@
 		<div class="columns">
 
 			<!-- Tab menu -->
-			<ul class="tabs" data-tabs="tabs" role="tablist" data-tabs="2m5cy2-tabs">
+			<ul class="tabs" data-tabs="tabs" role="tablist" data-tabs="2m5cy2-tabs" id="example-tabs">
 				<li class="tabs-title is-active" role="presentation">
 					<a href="#menuAppetizers" role="tab">Appetizers</a>
 				</li>
@@ -69,115 +70,277 @@
 			</ul>
 
 			<div class="tabs-content" data-tabs-content="example-tabs">
-				<div class="tabs-panel is-active" id="menuAppetizers">
 
-					<div class="cell cell-card" style="width: 300px;">
-						<div class="header cell-header ">
-							<h4>House Fries</h4>
-							<p>oh yum a tasty treat .Get it while its hot</p>
-							<div class="cell shrink footer cell-footer">
-								<p>Price: $$
-									<button type="button" class="button align-right">Add Item</button>
-								</p>
-							</div>
-						</div>
-					</div>
+				<!-- Appetizers Menu -->
+				<div class="tabs-panel is-active" data-menu-items="appetizers" id="menuAppetizers">
 
 					<div class="flex-container ">
 
-						<div class="cell cell-card" style="width: 300px;">
+						<div class="card" style="width: 300px;">
 							<div class="header cell-header card-section">
 								<h4>House Fries</h4>
-								<p>oh yum a tasty treat .Get it while its hot</p>
-								<div class="cell shrink footer cell-footer">
-									<p class="align-bottom">Price: $$
-										<button type="button" class="button align-right">Add Item</button>
+								<p>oh yum a tasty treat. Get it while its hot! </p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="1">Add Item</button>
 									</p>
 								</div>
 							</div>
 						</div>
 
-						<div class="cell cell-card" style="width: 300px;">
-							<div class="card-section">
-								<h4>Buffalo wings</h4>
-								<p>Tasty treat.</p>
-								<div clas="flex-container">
+						<div class=" card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>Cheesey Fries</h4>
+								<p>More cheese! I said more cheeeeeeeeeeese!</p>
+								<div class="card-divider flex-container footer">
 									<p class="align-left">Price: $$
-										<button type="button" class="button align-right">Add Item</button>
+										<button type="button" class="button align-right" data-item-id="2">Add Item</button>
 									</p>
 								</div>
 							</div>
 						</div>
 
 						<div class="card" style="width: 300px;">
-							<div class="card-section">
-								<h4>App 1</h4>
-								<p>Tasty treat.</p>
-								<div clas="flex-container">
+							<div class="header cell-header card-section">
+								<h4>Buffalo Wings</h4>
+								<p>Buffalos don't have wings</p>
+								<div class="card-divider flex-container footer">
 									<p class="align-left">Price: $$
-										<button type="button" class="button align-right">Add Item</button>
+										<button type="button" class="button align-right" data-item-id="3">Add Item</button>
 									</p>
 								</div>
 							</div>
 						</div>
 
 						<div class="card" style="width: 300px;">
-							<div class="card-section">
-								<h4>App 1</h4>
-								<p>Tasty treat.</p>
-								<div clas="flex-container">
+							<div class="header cell-header card-section">
+								<h4>Chicken Nuggies</h4>
+								<p>Is it chicken or something else...</p>
+								<div class="card-divider flex-container footer">
 									<p class="align-left">Price: $$
-										<button type="button" class="button align-right">Add Item</button>
+										<button type="button" class="button align-right" data-item-id="4">Add Item</button>
 									</p>
 								</div>
 							</div>
 						</div>
-
-						<div class="card" style="width: 300px;">
-							<div class="card-section">
-								<h4>App 1</h4>
-								<p>Tasty treat.</p>
-								<div clas="flex-container">
-									<p class="align-left">Price: $$
-										<button type="button" class="button align-right">Add Item</button>
-									</p>
-								</div>
-							</div>
-						</div>
-
-						<div class="card" style="width: 300px;">
-							<div class="card-section">
-								<h4>App 1</h4>
-								<p>Tasty treat.</p>
-								<div clas="flex-container">
-									<p class="align-left">Price: $$
-										<button type="button" class="button align-right">Add Item</button>
-									</p>
-								</div>
-							</div>
-						</div>
-
 					</div>
-
 				</div>
 
+				<!-- Burgers Menu -->
+				<div class="tabs-panel" data-menu-items="burgers" id="menuBurgers">
 
-				<div class="tabs-panel" id="menuBurgers">
-					<p>Burgers! Burgers! Burgers! Burgers! Burgers! Burgers! </p>
+					<div class="flex-container ">
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>Bruschetta Bout It Burger</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="1">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>If Looks Could Kale Burger</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="2">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>Summer Thyme Burger</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="3">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>Hummus a Tune Burger</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="4">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
-				<div class="tabs-panel" id="menuSalads">
-					<p>three</p>
-					<p>Ew Salads</p>
+
+				<!-- Salads Menu -->
+				<div class="tabs-panel" data-menu-items="salads" id="menuSalads">
+					<div class="flex-container ">
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>Peas and Thank You Salad</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="1">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>Sweet Home Avocado Salad</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="2">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>The Garden of Eden Salad</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="3">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>Hummus a Tune Burger</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="4">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
-				<div class="tabs-panel" id="menuSoftServe">
-					<p>four</p>
+
+				<!-- Ice Cream Menu -->
+				<div class="tabs-panel" data-menu-items="icecream" id="menuSoftServe">
+					<div class="flex-container ">
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>Strawberry</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="1">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>Pistachio</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="2">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>Chocolate</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="3">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>Vanilla</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="4">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
+
+				<!-- Drinks Menu -->
 				<div class="tabs-panel" id="menuDrinks">
-					<p>five</p>
-					<p>Would you like some Soft Serve?</p>
-				</div>
-				<div class="tabs-panel" id="panel6">
-					<p>Drinks go here</p>
+					<div class="flex-container ">
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>Coca-Cola</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="1">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>Milkshake</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="2">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>Water</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="3">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="card" style="width: 300px;">
+							<div class="header cell-header card-section">
+								<h4>Orange Soda</h4>
+								<p></p>
+								<div class="card-divider flex-container footer">
+									<p class="align-left">Price: $$
+										<button type="button" class="button align-right" data-item-id="4">Add Item</button>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
