--- a/public/main.html
+++ b/public/main.html
@@ -101,7 +101,7 @@
 								</div>
 							</div>
 						</div>
-git sta
+
 						<div class="card" style="width: 300px;">
 							<div class="header cell-header card-section">
 								<h4>Buffalo Wings</h4>
@@ -350,9 +350,25 @@ git sta
 
 	<!-- Login Modal -->
 	<div class="reveal" id="modalLogin" data-reveal>
-		<h1>Login page.</h1>
-		<p class="lead">You have UNLIMITED POWAAAAAA!!!!.</p>
-		<p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+		<h1>Admin Login</h1>
+		<p class="lead">Enter username and password for UNLIMITED POWAAAAA!!!</p>
+
+		<div class="row">
+			<div class="small-12 medium-6 large-3 columns">
+				<label>Username
+					<input type="text" placeholder="Username">
+				</label>
+			</div>
+			<div class="small-12 medium-6 large-9 columns">
+				<label>Passord
+					<input type="text" placeholder="Passord">
+				</label>
+			</div>
+		</div>
+		<div class="input-group-button">
+			<input type="submit" class="button" value="Submit">
+		</div>
+
 		<button class="close-button" data-close aria-label="Close modal" type="button">
 			<span aria-hidden="true">&times;</span>
 		</button>
