--- a/public/main.html
+++ b/public/main.html
@@ -355,18 +355,18 @@
 
 		<div class="row">
 			<div class="small-12 medium-6 large-3 columns">
-				<label>Username
-					<input type="text" placeholder="Username">
-				</label>
+				<!-- <label>Username -->
+				<input type="text" placeholder="Username">
+				<!-- </label> -->
 			</div>
 			<div class="small-12 medium-6 large-9 columns">
-				<label>Passord
-					<input type="text" placeholder="Passord">
-				</label>
+				<!-- <label>Passord -->
+				<input type="text" placeholder="Passord">
+				<!-- </label> -->
 			</div>
 		</div>
 		<div class="input-group-button">
-			<input type="submit" class="button" value="Submit">
+			<input type="submit" class="button large expanded" value="Submit">
 		</div>
 
 		<button class="close-button" data-close aria-label="Close modal" type="button">
@@ -376,9 +376,31 @@
 
 	<!-- Cart Modal -->
 	<div class="reveal" id="modalCart" data-reveal>
-		<h1>Awesome. I Have It.</h1>
-		<p class="lead">Your couch. It is mine.</p>
-		<p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+		<h1>Your Order</h1>
+		<p class="lead">Buy it now! or don't, I'm not your boss</p>
+
+		<table class="stack">
+			<thead>
+				<tr>
+					<th width="300">Item</th>
+					<th>Each</th>
+					<th>x Quantity</th>
+					<th>Subtotal</th>
+				</tr>
+			</thead>
+			<tbody id="cartTable">
+				<!-- insert rows of order items here -->
+				<tr>
+					<th></th>
+					<th></th>
+					<th>Total: </th>
+					<th>$$.$$</th>
+				</tr>
+			</tbody>
+		</table>
+		<div class="input-group-button">
+			<input type="submit" class="button large expanded" value="Place Order">
+		</div>
 		<button class="close-button" data-close aria-label="Close modal" type="button">
 			<span aria-hidden="true">&times;</span>
 		</button>
