--- a/public/main.html
+++ b/public/main.html
@@ -23,10 +23,11 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css">
 
-	<title>Welcome to Circle, Not Square</title>
+	<title>Circle, Not Square</title>
 </head>
 
 <body>
+
 	<div class="top-bar">
 		<div class="top-bar-left">
 			<ul class="dropdown menu" data-dropdown-menu>
@@ -47,8 +48,8 @@
 		<p>Home of the Bob's Burger, may I take your order.</p>
 	</div>
 
-	<div class="row">
-		<div class="columns">
+	<!-- <div class="row">
+		<div class="columns"> -->
 
 			<!-- Tab menu -->
 			<div class="flex-container">
@@ -345,8 +346,8 @@
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
+		<!-- </div>
+	</div> -->
 
 	<!-- Login Modal -->
 	<div class="reveal" id="modalLogin" data-reveal>
@@ -376,6 +377,7 @@
 
 	<!-- Cart Modal -->
 	<div class="reveal" id="modalCart" data-reveal>
+	<!-- <div class="off-canvas position-right" id="modalCart" data-off-canvas> -->
 		<h1>Your Order</h1>
 		<p class="lead">Buy it now! or don't, I'm not your boss</p>
 
