add separate css for admin page; update links to JS in html

--- a/public/admin.html
+++ b/public/admin.html
@@ -17,10 +17,10 @@
 		integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/admin.css">
 
 	<!-- Javascript -->
-	<script src="js/script.js"></script>
+	<script src="js/admin.js"></script>
 
 	<title>Circle | ADMIN</title>
 </head>
@@ -44,7 +44,6 @@
 
 	<div class="callout">
 		<h1>Welcome to Bob's Burgers menu.</h1>
-		<!-- <p>Home of the Bob's Burger, may I take your order.</p> -->
 	</div>
 
 	<!-- Off Canvas -->
@@ -95,7 +94,8 @@
 						<p>oh yum a tasty treat. Get it while its hot! </p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="1">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="1" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -107,7 +107,8 @@
 						<p>More cheese! I said more cheeeeeeeeeeese!</p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="2">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="2" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -119,7 +120,8 @@
 						<p>Buffalos don't have wings</p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="3">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="3" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -131,7 +133,8 @@
 						<p>Is it chicken or something else...</p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="4">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="4" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -150,7 +153,8 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="1">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="1" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -162,7 +166,8 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="2">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="2" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -174,7 +179,8 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="3">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="3" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -186,7 +192,8 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="4">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="4" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -204,7 +211,8 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="1">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="1" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -216,7 +224,8 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="2">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="2" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -228,7 +237,8 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="3">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="3" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -240,7 +250,8 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="4">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="4" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -258,7 +269,8 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="1">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="1" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -270,7 +282,8 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="2">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="2" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -282,7 +295,8 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="3">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="3" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -294,7 +308,8 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="4">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="4" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -312,7 +327,8 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="1">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="1" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -324,7 +340,8 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="2">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="2" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -336,7 +353,8 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="3">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="3" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
@@ -348,13 +366,42 @@
 						<p></p>
 						<div class="card-divider flex-container footer">
 							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="4">Edit Item</button>
+								<button type="button" class="button align-right" data-item-id="4" data-open="editItemModal">Edit
+									Item</button>
 							</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
+
+	<!-- Item Modal -->
+	<div class="reveal" id="editItemModal" data-reveal>
+		<h1>Item name:</h1>
+		<p class="lead">Description:</p>
+		<p class="lead">Cost:</p>
+
+		<!-- <div class="row">
+			<div class="small-12 medium-6 large-3 columns">
+				<input type="text" placeholder="Username">
+			</div>
+			<div class="small-12 medium-6 large-9 columns">
+				<input type="text" placeholder="Passord">
+			</div>
+		</div> -->
+		<div class="row flex-container">
+			<div class="input-group-button">
+				<button type="button" class="button large success" id="saveItem">Save</button>
+			</div>
+			<div class="input-group-button">
+				<button type="button" class="button large alert" id="deleteItem">Delete</button>
+			</div>
+		</div>
+
+		<button class="close-button" data-close aria-label="Close modal" type="button">
+			<span aria-hidden="true">&times;</span>
+		</button>
 	</div>
 
 	<script>
