--- a/public/main.html
+++ b/public/main.html
@@ -21,7 +21,7 @@
 	<meta class="foundation=mq">
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/main.css">
 
 	<title>Circle, Not Square</title>
 </head>
