--- a/public/main.html
+++ b/public/main.html
@@ -386,15 +386,14 @@
 				</tr>
 			</thead>
 			<tbody id="activeOrders-container">
-				<tr>
-					<td>Burger</td>
-					<td>20.00</td>
-				</tr>
+
+			</tbody>
+			<tfoot>
 				<tr class="totalAmount">
 					<td>Total: </td>
 					<td>10.00</td>
 				</tr>
-			</tbody>
+			</tfoot>
 		</table>
 
 		<div class="input-group-button">
