--- a/public/admin.html
+++ b/public/admin.html
@@ -51,7 +51,7 @@
 	<div class="flex-container">
 		<ul class="tabs" data-tabs="tabs" role="tablist" data-tabs="2m5cy2-tabs" id="menu-tabs">
 			<li class="tabs-title is-active" role="presentation">
-				<a href="#menuAppetizers" role="tab">Appetizers</a>
+				<a href="#menuSandwiches" role="tab">Sandwiches</a>
 			</li>
 			<li class="tabs-title" role="presentation">
 				<a href="#menuBurgers" role="tab">Burgers</a>
@@ -71,11 +71,11 @@
 	<div class="tabs-content" data-tabs-content="menu-tabs">
 
 		<!-- Appetizers Menu -->
-		<div class="tabs-panel is-active" data-menu-items="appetizers" id="menuAppetizers">
+		<div class="tabs-panel is-active" data-menu-items="sandwiches" id="menuSandwiches">
 
-			<div class="flex-container ">
+			<div class="flex-container menu_items" id="menu_items">
 
-				<div class="card" style="width: 300px;">
+				<!-- <div class="card" style="width: 300px;">
 					<div class="header cell-header card-section">
 						<h4>House Fries</h4>
 						<p>oh yum a tasty treat. Get it while its hot! </p>
@@ -125,7 +125,7 @@
 							</p>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 
