--- a/public/admin.html
+++ b/public/admin.html
@@ -69,11 +69,13 @@
 	</div>
 
 	<div class="tabs-content" data-tabs-content="menu-tabs">
-
+	<div class = "menuRender">
+		
+	</div>
 		<!-- Appetizers Menu -->
 		<div class="tabs-panel is-active" data-menu-items="sandwiches" id="menuSandwiches">
 
-			<div class="flex-container menu_items" id="menu_items">
+			<div class="flex-container " id="sandwichItem">
 
 				<!-- <div class="card" style="width: 300px;">
 					<div class="header cell-header card-section">
@@ -131,7 +133,7 @@
 
 		<!-- Burgers Menu -->
 		<div class="tabs-panel" data-menu-items="burgers" id="menuBurgers">
-
+			
 			<div class="flex-container ">
 
 				<div class="card" style="width: 300px;">
