--- a/public/admin.html
+++ b/public/admin.html
@@ -66,7 +66,7 @@
 				<a href="#menuDrinks" role="tab">Drinks</a>
 			</li>
 		</ul>
-		<button type="button" class="button" data-open="addItemModal">Add Item</button>
+		<button type="button" class="button" id="addItemModal" data-open="addItemModal">Add Item</button>
 	</div>
 
 	<div class="tabs-content" data-tabs-content="menu-tabs">
@@ -152,7 +152,7 @@
 			</label>
 			<div class="row flex-container">
 				<div class="input-group-button">
-					<button type="button" class="button large success" id="saveItem">Save</button>
+					<button type="button" class="button large success" id="saveNewItem">Save</button>
 				</div>
 				<!-- <div class="input-group-button">
 					<button type="button" class="button large alert" id="deleteItem">Delete</button>
